# ena-ons

./: LICENSE  README.md  pyproject.toml
.github/workflows/: code-quality.yaml  publish.yaml
data/: agrupamentos.csv  hidrograma.csv  produtibilidade.csv  vazao.csv
ena_ons/: __init__.py  codigos.py  ena.py  regras.py
